# Python_OnlineStore_Musaelian

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
src/config/: settings.py
src/core/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_customer_address_alter_customer_contact_info.py  0002_alter_product_category.py  0002_alter_product_category_alter_product_description_and_more.py  0003_alter_cart_options.py  0003_customer_created_at_customer_email_and_more.py  0003_customer_password.py  0004_alter_customer_address_alter_customer_contact_info_and_more.py  0004_alter_customer_password.py  0004_cartitem.py  0005_customer_groups_customer_is_superuser_and_more.py  0005_remove_order_product_remove_order_quantity_and_more.py  0006_customer_is_active_customer_is_staff.py  0006_remove_order_delivery_date.py  0007_order_delivery_datetime.py  0007_rename_created_at_customer_date_joined_and_more.py  0008_remove_order_delivery_datetime.py  0009_order_delivery_datetime.py  0010_alter_order_delivery_datetime.py  0011_alter_cartitem_options_remove_cart_product_and_more.py  0012_alter_order_cart.py  0013_alter_order_delivery_datetime.py  0014_alter_order_delivery_datetime.py  0015_alter_customer_email.py
src/templates/: add_to_cart.html  base.html  create_customer.html  home.html  login.html  logout.html  order_success.html  place_order.html  product_detail.html  product_list.html  register.html  view_cart.html  view_purchase_history.html
src/tests/: test_models.py
src/users/: admin.py
(+5 files in other folders)
