[tool.poetry]
name = "config"
version = "0.1.0"
description = "Online store project"
authors = ["Karlen M <karlenmusaelian@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
django = "5.0.6"
sqlparse = "0.5.0"
tzdata = "2024.1"
django-environ = "^0.11.2"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"
psycopg-pool = "^3.2.2"
pillow = "^10.3.0"
django-admin-interface = "^0.28.6"
django-colorfield = "^0.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
